10/01/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, add call to tgdb_types_free_command.

09/30/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, remove call to depricated tgdb_delete_command

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: remove #include 'ibuf.h'
   process_commands, TGDB_ABSOLUTE_SOURCE_ACCEPTED,
   TGDB_ABSOLUTE_SOURCED_DENIED, change to use tgdb_source_file.

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_UDPATE_FILE_POSITION, remove use of
   'struct string', TGDB now returns 'char*'

09/27/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_UPDATE_BREAKPOINTS case

09/26/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, changed case TGDB_ABSOLUTE_SOURCE_ACCEPTED and
   TGDB_ABSOLUTE_SOURCE_DENIED

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: removed #include 'queue.h'
   process_commands, implement TGDB_UPDATE_SOURCE_FILES case.

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, implement TGDB_UPDATE_FILE_POSITION case.

09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: Add new #include of "tgdb_list.h"
   process_commands, implement TGDB_UPDATE_BREAKPOINTS case.

09/23/2003 Bob Rossi <bob@brasko.net>

   * sources.c: source_vscroll, source_set_sel_line, sets sel_rline 
   to be equal to sel_line

09/21/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: global commandq variable removed.
   process_commands, changed parameter from 'struct queue' to 'struct tgdb'
   gdb_input, removed parameter commandq in call to tgdb_recv_debugger_data
   call process_commands with tgdb instead of commandq
   main, remove initialization of commandq

09/21/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, rename 'Command' to 'tgdb_command'

09/15/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, removed TGDB_QUIT from switch and added
   TGDB_QUIT_NORMAL and TGDB_QUIT_ABNORMAL

09/10/2003 Bob Rossi <bob@brasko.net>