@@ -1,3 +1,8 @@
+10/05/2003 Bob Rossi <bob@brasko.net>
+
+   * cgdb.c: process_commands, remove case TGDB_QUIT_NORMAL and
+   TGDB_QUIT_ABNORMAL to add TGDB_QUIT.
+
 10/01/2003 Bob Rossi <bob@brasko.net>
 
    * cgdb.c: process_commands, add call to tgdb_types_free_command.
